# rates-api

./: .docker.env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  local.env  pyproject.toml
.github/workflows/: github-ci.yml
rates/: manage.py
rates/apps/rates/: external.py  filters.py  models.py  routes.py  serializers.py  utils.py  views.py
rates/apps/rates/management/commands/: create_currencies.py
rates/apps/rates/migrations/: 0001_initial.py
rates/apps/rates/templates/: index.html
rates/rates/: asgi.py  settings.py  urls.py  wsgi.py
rates/tests/apps/rates/: conftest.py  factories.py  test_external.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
rates/tests/apps/rates/management/commands/: test_create_currencies.py
